--- a/startup_main.css
+++ b/startup_main.css
@@ -74,6 +74,16 @@
 
 #apple-img {
 	margin-top: 40px;
+	padding: 10px 10px;
+	height: 20em;
+	width: 25em;
+}
+
+#android-img {
+	margin-left: 20px;
+	padding: 10px 10px;
+	height: 21em;
+	width: 25em;
 }
 
 .additional-info .container {
@@ -85,7 +95,6 @@
 }
 
 .android-development img {
-	border: 4px solid black;
 	padding: 10px 10px;
 }
 
