--- a/zurb/css/startup_main_zurb.css
+++ b/zurb/css/startup_main_zurb.css
@@ -15,17 +15,22 @@
 	color: white;
 }
 
-.fullWidth{
+#header {
+	min-width: 100%;
+	
+}
+
+.full-width{
 	background: url(https://raw.githubusercontent.com/derekmcavoy/cool-startup/master/images/ManchesterNH.jpg);
 	background-repeat: no-repeat;
-	width: 100%;
+	min-width: 100%;
 	height: 400px;
 	margin: auto;
 	max-width: 100%;
 	position: relative;
 }
 
-.fullWidth h1 {
+.full-width h1 {
 	color: #FFFFFF;
 	font-size: 48px;
 	font-family: 'Shift', sans-serif;
@@ -35,7 +40,7 @@
 	margin-left: 20px;
 }
 
-.fullWidth p {
+.full-width p {
 	color: #FFFFFF;
 	font-size: 24px;
 	font-family: 'Shift', sans-serif;
@@ -65,7 +70,7 @@
 	margin-bottom: 10px;
 }
 .android-development h3 {
-		color: black;
+	color: black;
 	font-size: 20px;
 	font-weight: bold;
 }
@@ -86,10 +91,7 @@
 
 .additional-info .panel {
 	background-color: #F5F5F5;
-	border-left: 1px solid black;
-	border-right: 1px solid black;
-	border-bottom: 1px solid black;
-	border-top: 1px solid black;
+	border: 1px solid black;
 	margin-bottom: 20px;
 	position: relative;
 }
