--- a/normalize/css/main.css
+++ b/normalize/css/main.css
@@ -103,16 +103,16 @@
 	width: 100%;
 	-webkit-column-count: 3; /* Chrome, Safari, Opera */
     -moz-column-count: 3; /* Firefox */
-    column-count: 3;
+    column-count: 3; 
 	margin: auto;
 	border-top: 1px solid black;
 }
 
 .additional-info .container {
 	display: inline-block;
-	margin: auto;
+	margin-left: 5%;
 	padding: 40px;
-	
+	margin-right: 5%;
 }
 
 .additional-info p {
